# Tawasol

./: CMakeLists.txt
app/: CMakeLists.txt  main.cpp
configs/: default.xml
resources/: resources.qrc
src/gui/: CMakeLists.txt  Console.cpp  Console.h  DeleteConfig.cpp  DeleteConfig.h  DeleteConfiguration.cpp  DeleteConfiguration.h  LoadConfig.cpp  LoadConfig.h  LoadConfiguration.cpp  LoadConfiguration.h  LogFile.cpp  LogFile.h  MainWindow.cpp  MainWindow.h  SaveConfig.cpp  SaveConfig.h  SaveConfiguration.cpp  SaveConfiguration.h  Setting.cpp  Setting.h  TextFormat.cpp  TextFormat.h
src/io/: SerialPort.cpp  SerialPort.h
src/utils/: CMakeLists.txt  ConfigData.cpp  ConfigData.h  ConfigFile.cpp  Log.cpp  Log.h  tawasol_utils.h
